@@ -1,14 +1,12 @@
 package com.example.demo.service.impl;
 
 import com.example.demo.entity.Product;
+import com.example.demo.exception.ValidationException;
 import com.example.demo.repository.ProductRepository;
-import com.example.demo.service.ProductService;
 
-import org.springframework.stereotype.Service;
 import java.util.List;
 
-@Service
-public class ProductServiceImpl implements ProductService {
+public class ProductServiceImpl {
 
     private final ProductRepository productRepository;
 
@@ -16,23 +14,21 @@ public class ProductServiceImpl implements ProductService {
         this.productRepository = productRepository;
     }
 
-    @Override
     public Product addProduct(Product product) {
 
         if (product.getModelNumber() == null ||
-            product.getModelNumber().isBlank()) {
-            throw new IllegalArgumentException("Model number required");
+                product.getModelNumber().trim().isEmpty()) {
+            throw new ValidationException("Model number required");
         }
 
         if (product.getCategory() == null ||
-            product.getCategory().isBlank()) {
-            throw new IllegalArgumentException("Category required");
+                product.getCategory().trim().isEmpty()) {
+            throw new ValidationException("Category required");
         }
 
         return productRepository.save(product);
     }
 
-    @Override
     public List<Product> getAllProducts() {
         return productRepository.findAll();
     }
